--- a/CSS/css_padrao.css
+++ b/CSS/css_padrao.css
@@ -1,3 +1,18 @@
+.divini{
+  text-align: center;
+  color: white;
+}
+.especial{
+  text-align: center;
+  border:1px solid white;
+  max-width: 100px;
+  max-height: 180px;
+  min-width: 100px;
+  min-height: 180px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+}
 .divd {
   text-align: center;
   border:1px solid white;
@@ -50,4 +65,7 @@ table {
 }
 th,li {
   color: black;
+}
+form{
+  color: green;
 }
