--- a/CSS/css_padrao.css
+++ b/CSS/css_padrao.css
@@ -35,7 +35,7 @@ section {
   margin-right: auto;
 }
 body {
-  background-image: url("space.jpg");
+  background-image: url("../IMAGENS/space.jpg");
 }
 nav {
   text-align:center;
